[gd_scene load_steps=27 format=3 uid="uid://dkrvuhoo7rd1r"]

[ext_resource type="Script" path="res://Character Select/characterselect.gd" id="1_k2uhs"]
[ext_resource type="PackedScene" uid="uid://srmqp8v1pxq8" path="res://1 Jin Kazama/jin_p_1_select.tscn" id="2_oq3ql"]
[ext_resource type="PackedScene" uid="uid://k0kotvxnx4d7" path="res://1 Jin Kazama/jin_p_2_select.tscn" id="3_pi26h"]
[ext_resource type="PackedScene" uid="uid://cka3b6xqdhmwg" path="res://1 Devil Jin/d_jin_select_p_1.tscn" id="4_marqv"]
[ext_resource type="PackedScene" uid="uid://c81oqifnoydsr" path="res://1 Devil Jin/d_jin_select_p_2.tscn" id="5_qr8v0"]
[ext_resource type="PackedScene" uid="uid://cov0edl2jxqm6" path="res://1 Deadpool/deadpool_p_1_select.tscn" id="6_xblai"]
[ext_resource type="PackedScene" uid="uid://dlsembn85p3dc" path="res://1 Deadpool/deadpool_p_2_select.tscn" id="7_qhkvb"]
[ext_resource type="PackedScene" uid="uid://cpeoj32epjjqt" path="res://1 John Wick/john_wick_p_1_select.tscn" id="8_8i2td"]
[ext_resource type="PackedScene" uid="uid://bt3m8lj0e8ugh" path="res://1 John Wick/john_wick_p_2_select.tscn" id="9_4ex3m"]
[ext_resource type="PackedScene" uid="uid://drocb5op5cfyy" path="res://1 Ryu/ryu_p_1_select.tscn" id="10_nkpfq"]
[ext_resource type="PackedScene" uid="uid://bworwahc0peld" path="res://1 Ryu/ryu_p_2_select.tscn" id="11_5ttcn"]
[ext_resource type="PackedScene" uid="uid://cjlfsf3kbiqne" path="res://1 Dr. Doom/doom_p_1_select.tscn" id="12_fp8an"]
[ext_resource type="PackedScene" uid="uid://bos4nhfxbhhix" path="res://1 Dr. Doom/doom_p_2_select.tscn" id="13_n37x2"]
[ext_resource type="PackedScene" uid="uid://csn71a41n66kd" path="res://1 Rocky Balboa/rocky_p_1_select.tscn" id="14_na80h"]
[ext_resource type="PackedScene" uid="uid://dsn6vakt3cmsu" path="res://1 Rocky Balboa/rocky_p_2_select.tscn" id="15_ompbd"]
[ext_resource type="PackedScene" uid="uid://c725ntihwowpv" path="res://1 Raiden/raiden_p_1_select.tscn" id="16_vlytb"]
[ext_resource type="PackedScene" uid="uid://x23qkyqa74uq" path="res://1 Raiden/raiden_p_2_select.tscn" id="17_y27l7"]
[ext_resource type="PackedScene" uid="uid://wi4l85w31v8g" path="res://1 Terminator/terminator_p_1_select.tscn" id="18_td43j"]
[ext_resource type="PackedScene" uid="uid://i7javn8rx0f4" path="res://1 Terminator/terminator_p_2_select.tscn" id="19_lp1tx"]
[ext_resource type="PackedScene" uid="uid://qoe675jqn8ir" path="res://1 Winter Soldier/soldier_p_1_select.tscn" id="20_bb4dh"]
[ext_resource type="PackedScene" uid="uid://51pqsq3p4sxj" path="res://1 Winter Soldier/soldier_p_2_select.tscn" id="21_vrvnp"]
[ext_resource type="PackedScene" uid="uid://v2ttyxy2h0su" path="res://1MainCharacter/mc_select_p_1.tscn" id="22_hq2rk"]
[ext_resource type="PackedScene" uid="uid://cxkycfahah041" path="res://1MainCharacter/mc_select_p_2.tscn" id="23_6b1hc"]
[ext_resource type="AudioStream" uid="uid://cn1udulpbh5v5" path="res://Character Select/ChooseDestiny.mp3" id="23_l56ex"]
[ext_resource type="Texture2D" uid="uid://c48bv5ok5nxt7" path="res://Character Select/Select Character Screen.png" id="24_f6wnp"]
[ext_resource type="AudioStream" uid="uid://bx2h7i3nmfwkb" path="res://Character Select/Mortal Kombat 11 Character Select Music.mp3" id="24_tn18t"]


[node name="characterselect" type="Node2D"]
process_mode = 3
script = ExtResource("1_k2uhs")
jinP1select = ExtResource("2_oq3ql")
jinP2select = ExtResource("3_pi26h")
DjinP1select = ExtResource("4_marqv")
DjinP2select = ExtResource("5_qr8v0")
DeadpoolP1select = ExtResource("6_xblai")
DeadpoolP2select = ExtResource("7_qhkvb")
JohnWickP1select = ExtResource("8_8i2td")
JohnWickP2select = ExtResource("9_4ex3m")
RyuP1Select = ExtResource("10_nkpfq")
RyuP2Select = ExtResource("11_5ttcn")
DoomP1Select = ExtResource("12_fp8an")
DoomP2Select = ExtResource("13_n37x2")
RockyP1Select = ExtResource("14_na80h")
RockyP2Select = ExtResource("15_ompbd")
RaidenP1Select = ExtResource("16_vlytb")
RaidenP2Select = ExtResource("17_y27l7")
TermP1Select = ExtResource("18_td43j")
TermP2Select = ExtResource("19_lp1tx")
SoldierP1Select = ExtResource("20_bb4dh")
SoldierP2Select = ExtResource("21_vrvnp")
MCP1Select = ExtResource("22_hq2rk")
MCP2Select = ExtResource("23_6b1hc")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = -1.0
offset_top = -18.0
offset_right = 1931.0
offset_bottom = 1117.0
texture = ExtResource("24_f6wnp")

[node name="backButton" type="LinkButton" parent="."]
offset_left = 41.0
offset_top = 926.0
offset_right = 412.0
offset_bottom = 1048.0

[node name="NextButton" type="LinkButton" parent="."]
offset_left = 1440.0
offset_top = 921.0
offset_right = 1792.0
offset_bottom = 1047.0

[node name="JinButton" type="LinkButton" parent="."]
offset_left = 1184.0
offset_top = 805.0
offset_right = 1372.0
offset_bottom = 999.0

[node name="DeadpoolButton" type="LinkButton" parent="."]
offset_left = 447.0
offset_top = 705.0
offset_right = 621.0
offset_bottom = 894.0

[node name="RyuButton" type="LinkButton" parent="."]
offset_left = 1192.0
offset_top = 604.0
offset_right = 1365.0
offset_bottom = 787.0

[node name="DoomButton" type="LinkButton" parent="."]
offset_left = 1387.0
offset_top = 704.0
offset_right = 1557.0
offset_bottom = 893.0

[node name="DJinButton" type="LinkButton" parent="."]
offset_left = 635.0
offset_top = 807.0
offset_right = 808.0
offset_bottom = 993.0

[node name="RaidenButton" type="LinkButton" parent="."]
offset_left = 1013.0
offset_top = 810.0
offset_right = 1185.0
offset_bottom = 995.0

[node name="TerminatorButton" type="LinkButton" parent="."]
offset_left = 822.0
offset_top = 602.0
offset_right = 989.0
offset_bottom = 787.0

[node name="WSoldierButton" type="LinkButton" parent="."]
offset_left = 1013.0
offset_top = 605.0
offset_right = 1185.0
offset_bottom = 787.0

[node name="JohnWickButton" type="LinkButton" parent="."]
offset_left = 821.0
offset_top = 811.0
offset_right = 989.0
offset_bottom = 997.0

[node name="RockyButton" type="LinkButton" parent="."]
offset_left = 635.0
offset_top = 602.0
offset_right = 805.0
offset_bottom = 789.0

[node name="MCButton" type="LinkButton" parent="."]
offset_left = 907.0
offset_top = 410.0
offset_right = 1071.0
offset_bottom = 596.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("23_l56ex")
volume_db = 0.468
autoplay = true

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("24_tn18t")
volume_db = 1.0
autoplay = true

[connection signal="pressed" from="backButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="JinButton" to="." method="_on_jin_button_pressed"]
[connection signal="pressed" from="DeadpoolButton" to="." method="_on_deadpool_button_pressed"]
[connection signal="pressed" from="RyuButton" to="." method="_on_ryu_button_pressed"]
[connection signal="pressed" from="DoomButton" to="." method="_on_doom_button_pressed"]
[connection signal="pressed" from="DJinButton" to="." method="_on_d_jin_button_pressed"]
[connection signal="pressed" from="RaidenButton" to="." method="_on_raiden_button_pressed"]
[connection signal="pressed" from="TerminatorButton" to="." method="_on_terminator_button_pressed"]
[connection signal="pressed" from="WSoldierButton" to="." method="_on_w_soldier_button_pressed"]
[connection signal="pressed" from="JohnWickButton" to="." method="_on_john_wick_button_pressed"]
[connection signal="pressed" from="RockyButton" to="." method="_on_rocky_button_pressed"]
[connection signal="pressed" from="MCButton" to="." method="_on_mc_button_pressed"]
